Tuesday, May 21, James Turner

	* Protected against MOVE ops with no ID argument set: fail
	  rather than asserting.
	* Protected against character refreshed prior to account
	  login. (Thanks man-di)

Wednesday, May 15, James Turner

	* Added implemention of missing getServerCount to the Metaserver
	* Fixed the Meta update code to emit CompletedServerList after
	  the last active query is deleted. [Thanks to Xmp for catching
	  both issues, which no one has touched before]
	* Tweaked emission of CompletedServerList to do the right thing
	* Hopefully fixed Meta::doFailure to remove _stream from the Poll
	  object (should stop the stream of errors in Dime)
	* Converted Meta::Failure to pass it's error by const reference, 
 	  like all the other signals do

Tuesday, May 14, Al Riddoch

	* src/Player.cpp: Ensure that USERNAME is provided for logins.

Sunday, May 5, James Turner

	* Fix Connection::Disconneting system (found by unit testing!)
	* Made more of the tests work (had to stop using tcp_server_socketm
	  becuase it seems you must set SO_REUSEADDR before calling bind())
	* Fixed some return-by-reference bugs in testUtils, which again
	  helps more of the tests work.
	* Some tests are still not working right, GDB is being unhelpful
	  though. Investigation by people who's GDB doesn't suck
	  appreciated (eg, for whom 'break __throw' does the right thing)

Thursday, May 2, James Turner

    * Changed Time::Stamp::getCurrent() into a static
      factory method now(). The previous syntax looked
      really odd.
    * Updated all the callers of above.
    * Modified stubServer to set SO_REUSEADDR on it's
      sockets, which should fix the odd test problems (well some
      of them .. it still gets linker errors which is a pain).
      Thanks to elefth for spotting this one.
    * Added some boot-strapping code to TypeInfo, not sure
      how well it will work, but it uses the same path as
      loading from atlas.xml, so it should be safe.
